# Solving-the-0-1-Knapsack-Problem-Using-the-LAB-Algorithm

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
Multiple Knapsack Problem/: Multiple_Knapsack_Problem.ipynb
Single Knapsack Problem/: Single_Knapsack_Problem.ipynb
assets/: benchmark_results.json
lab_knapsack/: __init__.py  cli.py  core.py  datasets.py  problems.py
tests/: test_core.py  test_datasets.py  test_problems.py
